--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Your Name"                    # Change this to your full name or "Portfolio of [Your Name]"
+title: "Zafaryab Haider"                    # Change this to your full name or "Portfolio of [Your Name]"
 description: "Engineer and Photographer"  # A brief description of what you do
 logo: /assets/img/logo.png             # Add a logo image here if you want, otherwise remove this line
 
